# DuckLink

./: .gitignore  messages.toml
lib/CPP/messages/: Duckmsg.h  messages.h
lib/Python/messages/: duckmsg.py  serialcom.py
lib/common/: Readme.md
lib/common/python/: message.py
lib/messages/: Readme.md
lib/python/messages/: duckmsg.py  messages.py
message_generator/: Cargo.toml  messages.toml  msgs_test.toml
message_generator/src/: c_generator.rs  cpp_generator.rs  errors.rs  generator.rs  main.rs  message.rs  parser.rs  python_generator.rs
