[package]
name = "message_generator"
version = "0.1.0"
authors = ["Fabien-B <fabien.bonneval@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.3"
serde = "1.0.101"
termion = "1.5.3"
Inflector = "0.11.4"
clap = "2.33.0"
rand = "0.7.2"

